--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "logseq-copliot",
-  "version": "1.6.0",
-  "description": "Logseq Copilot, Connect with you logseq API server, bring your information when you browsing.",
+  "name": "logseq-copilot-http",
+  "version": "0.0.7",
+  "description": "Logseq Copilot HTTP - Connect with logseq-http-server to access your Logseq graphs without requiring Logseq Desktop to be running.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eindex/logseq-copliot.git"
+    "url": "https://github.com/kerim/logseq-copilot-http.git"
   },
   "scripts": {
     "test": "jest",
@@ -70,6 +70,7 @@
     "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
+    "readable-stream": "^3.6.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^3.0.1",
